--- a/node-typescript/package.json
+++ b/node-typescript/package.json
@@ -1,7 +1,7 @@
 {
   "name": "worqhat-api-examples",
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc -p .",
@@ -10,10 +10,13 @@
   "dependencies": {
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "express": "^4.19.2"
   },
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.11"
   }
 }
