--- a/node-typescript/package.json
+++ b/node-typescript/package.json
@@ -10,13 +10,14 @@
   "dependencies": {
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "form-data": "^4.0.0",
-    "express": "^4.19.2"
+    "worqhat": "^3.8.0"
   },
   "devDependencies": {
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.4",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.14.11"
+    "@types/node": "^20.14.11",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.5.4"
   }
 }
