--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -3,3 +3,7 @@ python-dotenv==1.0.1
 worqhat==3.5.0
 fastapi==0.111.0
 uvicorn==0.30.3
+pytest==8.3.2
+pytest-asyncio==0.23.7
+pytest-mock==3.14.0
+requests-mock==1.12.1
