--- a/node-typescript/package.json
+++ b/node-typescript/package.json
@@ -8,7 +8,8 @@
     "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "sdk:test": "ts-node-dev --transpile-only src/sdkSmokeTest.ts"
   },
   "dependencies": {
     "axios": "^1.7.2",
