--- a/next-endpoint-ui/package.json
+++ b/next-endpoint-ui/package.json
@@ -16,6 +16,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "next-mdx-remote": "^5.0.0",
