--- a/next-endpoint-ui/package.json
+++ b/next-endpoint-ui/package.json
@@ -30,6 +30,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-syntax-highlighter": "^16.1.0",
+    "remark-gfm": "^4.0.1",
     "shiki": "^3.15.0",
     "simple-icons": "^15.21.0",
     "tailwind-merge": "^3.4.0"
